--- a/web/src/app/routes/guild/guild.component.sass
+++ b/web/src/app/routes/guild/guild.component.sass
@@ -86,6 +86,32 @@
     widows: 100%
 
 
+.starboard-container
+    @media only screen and (min-width: 1650px)
+        display: block
+        position: fixed
+        top: 50px
+        bottom: 20px
+        left: 20px
+        width: 320px
+        overflow: auto
+        border-radius: 10px
+
+        &::-webkit-scrollbar
+            width: 5px
+        
+        &::-webkit-scrollbar-track
+            background: rgba(0, 0, 0, 0.15)
+            border-radius: 5px
+        
+        &::-webkit-scrollbar-thumb
+            background: rgba(0, 0, 0, 0.15)
+            border-radius: 5px
+
+    margin-top: 30px
+    widows: 100%
+
+
 .settingsTile
     background-color: $c-nqblack
     padding: 10px
