update media flex wrap in starboard

--- a/web/src/app/components/starboard-entry/starboard-entry.component.sass
+++ b/web/src/app/components/starboard-entry/starboard-entry.component.sass
@@ -28,6 +28,8 @@
         word-break: break-all
 
     > .media
+        display: flex
+        flex-wrap: wrap
         > *
             width: 100%
             max-width: 280px
