--- a/web/src/app/components/header/header.component.html
+++ b/web/src/app/components/header/header.component.html
@@ -12,7 +12,7 @@
     </span>
   </div>
 
-  <div *ngIf="selfUser; else tmpLogin" id="user-info" class="d-flex">
+  <div *ngIf="selfUser?.id; else tmpLogin" id="user-info" class="d-flex">
     <app-popup
       *ngIf="popupVisible"
       class="logout-popup"
