--- a/web/src/app/routes/member/member.component.html
+++ b/web/src/app/routes/member/member.component.html
@@ -124,15 +124,17 @@
             <app-rolebadge *ngFor="let r of memberRoles" [role]="r"></app-rolebadge>
         </div>
 
-        <h4 class="mb-3">Karma</h4>
+        <div *ngIf="!member?.user.bot">
+            <h4 class="mb-3">Karma</h4>
 
-        <div class="d-flex">
-            <a routerLink="/guilds/{{ guild.id }}/scoreboard" class="mr-3 karma-tile">
-                <app-karma-tile title="Guild" [value]="member.karma"></app-karma-tile>
-            </a>
-            <a routerLink="/guilds/{{ guild.id }}/scoreboard" class="karma-tile">
-                <app-karma-tile title="Total" [value]="member.karma_total"></app-karma-tile>
-            </a>
+            <div class="d-flex">
+                <a routerLink="/guilds/{{ guild.id }}/scoreboard" class="mr-3 karma-tile">
+                    <app-karma-tile title="Guild" [value]="member.karma"></app-karma-tile>
+                </a>
+                <a routerLink="/guilds/{{ guild.id }}/scoreboard" class="karma-tile">
+                    <app-karma-tile title="Total" [value]="member.karma_total"></app-karma-tile>
+                </a>
+            </div>
         </div>
 
         <h4 class="mt-4 mb-3">General User Information</h4>
@@ -171,7 +173,10 @@
             </tbody>
         </table>
 
-        <div *ngIf="member.user.id !== guild.self_member.user.id" class="mt-4 mb-2">
+        <div *ngIf="
+            member.user.id !== guild.self_member.user.id && 
+            canPerformAny('sp.guild.mod.report', 'sp.guild.mod.kick', 'sp.guild.mod.ban', 'sp.guild.mod.mute')
+        " class="mt-4 mb-2">
             <h4>Moderation</h4>
             <app-spinner id="spinner-load-modbuttons" *ngIf="!perm" [started]="true"></app-spinner>
             <div class="mod-buttons">
@@ -181,7 +186,7 @@
                 <button *ngIf="canPerform('sp.guild.mod.kick')" class="bg-orange" (click)="kick()">
                     KICK
                 </button>
-                <button *ngIf="canPerform('sp.guild.mod.kick')" class="bg-red" (click)="ban()">
+                <button *ngIf="canPerform('sp.guild.mod.ban')" class="bg-red" (click)="ban()">
                     BAN
                 </button>
                 <button *ngIf="canPerform('sp.guild.mod.mute')" class="bg-purple" (click)="muteUnmute()">
