--- a/web/src/app/routes/guild-admin/karma/ga-karma.component.html
+++ b/web/src/app/routes/guild-admin/karma/ga-karma.component.html
@@ -25,7 +25,48 @@
         </div>
 
         <div class="mt-5">
-            <button (click)="onSave()">SAVE</button>
+            <button (click)="onSave()">Save</button>
+        </div>
+    </div>
+
+    <app-spinner *ngIf="!rules" [started]="true"></app-spinner>
+    <div *ngIf="rules" class="mt-5">
+        <h3 class="mb-2">Rules</h3>
+        <div class="d-flex mt-3">
+            <span class="mr-2">When a users karma</span> 
+            <select class="mr-2" [value]="newRule.trigger" (change)="onRuleTriggerChange($event.target.value)">
+                <option value="1">rises above</option>
+                <option value="0">drops below</option>
+            </select>
+            <input class="mr-2 karma-rule-input" type=number [(ngModel)]="newRule.value"/>
+            <span class="mr-2">points</span>
+            <span class="mr-2">then</span>
+            <select class="mr-2" [(ngModel)]="newRule.action">
+                <option value="TOGGLE_ROLE">toggle role</option>
+                <option value="KICK">kick member</option>
+                <option value="BAN">ban member</option>
+                <option value="SEND_MESSAGE">send message</option>
+            </select>
+            <div *ngIf="newRule.action === 'TOGGLE_ROLE'">
+                <input type=text placeholder="role resolvable" [(ngModel)]="newRule.argument"/>
+            </div>
+            <div *ngIf="newRule.action === 'SEND_MESSAGE'">
+                <input type=text placeholder="message content" [(ngModel)]="newRule.argument"/>
+            </div>
+            <span>.</span>
+        </div>
+        <div>
+            <button class="mt-3" (click)="applyRule()">Apply Rule</button>
+        </div>
+        <div class="mt-4">
+            <div *ngFor="let r of rules" class="karma-rule">
+                When a users karma <span class="embedded">{{ ruleTrigger(r.trigger) }}</span>&nbsp;<span class="embedded">{{ r.value }}</span> points then&nbsp;
+                <span class="embedded">{{ ruleAction(r.action) }}</span>
+                <span *ngIf="r.action === 'TOGGLE_ROLE'">with id <span class="embedded">{{ r.argument }}</span></span>
+                <span *ngIf="r.action === 'SEND_MESSAGE'">with content <span class="embedded">{{ r.argument }}</span></span>
+                .
+                <button class="btn-rule-remove ml-2" (click)="removeRule(r)"></button>
+            </div>
         </div>
     </div>
 
