--- a/web/src/sass/vars.sass
+++ b/web/src/sass/vars.sass
@@ -1,14 +1,14 @@
 // DISCORD COLOR CI
-$c-blurple: #7289DA
+$c-blurple: #5865F2
 $c-greyple: #99AAB5
 $c-darkbnb: #2C2F33
 $c-nqblack: #23272A
-$c-red:     #e53935
+$c-red:     #ED4245
 $c-orange:  #F57C00
 $c-green:   #43A047
-$c-lime:    #8BC34A
+$c-lime:    #57F287
 $c-cyan:    #03A9F4
-$c-purple:  #9C27B0
+$c-purple:  #EB459E
 
 $c-bg-general: $c-darkbnb
 $c-font-general: white
