--- a/web/src/app/components/header/header.component.sass
+++ b/web/src/app/components/header/header.component.sass
@@ -1,10 +1,11 @@
 @import '../../../sass/vars'
 @import '../../../sass/mixins'
     
-.logout-popup
+.dropdown-popup
     position: absolute
     z-index: 10
-    transform: translateY(30px)
+    transform: translate(-3px, 35px)
+    width: 100%
 
 .popup-entry
     display: flex
@@ -21,8 +22,8 @@
 #header
     height: 50px
     display: flex
+    align-items: center
     background-color: $c-nqblack
-    padding: 10px 10px
 
     *
         +my-auto
@@ -39,15 +40,22 @@
         font-size: 25px
 
     #user-info
+        position: relative
         margin-right: 0
         margin-left: auto
+        background-color: rgba(black, 0.25)
+        padding: 5px
+        border-radius: 100px
+        cursor: pointer
 
-        .logout-btn
+        .avatar
+            height: 25px
+            width: 25px
+
+        .dropdown-btn
             font-size: 12px
-            margin-right: 10px
+            margin: 0 15px 0 10px
             border-radius: 3px
-            background-color: rgba(0, 0, 0, .4)
-            padding: 5px 10px
             cursor: pointer
             +my-auto
 
@@ -60,10 +68,15 @@
         margin-left: 20px
 
         a
-            padding: 3px 6px
+            padding: 5px 10px
             background-color: rgba(0, 0, 0, .3)
             margin-right: 5px
-            border-radius: 5px
+            border-radius: 100px
+            opacity: 0.8
+            transition: all 0.2s ease
+            font-size: 0.8em
+            &:hover
+                opacity: 1
 
 
 .btn-login
