--- a/web/src/app/routes/guild/guild.component.sass
+++ b/web/src/app/routes/guild/guild.component.sass
@@ -4,7 +4,6 @@
 #heading-container
     display: flex
     flex-wrap: wrap
-    margin-bottom: 20px
 
     img
         width: 50px
@@ -23,8 +22,8 @@
     width: 100%
     background-color: $c-nqblack
     display: flex
-    border-radius: 5px
-    padding: 10px
+    border-radius: 10px
+    padding: 20px 10px 20px 20px
 
     +hover-btn(1.01)
 
@@ -32,7 +31,7 @@
         font-size: 14px
 
     img
-        border-radius: 5px
+        border-radius: 100%
         height: 80px
         width: 80px
         margin-right: 20px
