update guild overview style; update heading font; update home screen

--- a/web/src/app/components/header/header.component.sass
+++ b/web/src/app/components/header/header.component.sass
@@ -13,6 +13,8 @@
     p
         margin-left: 10px
         margin-right: 0 !important
+        text-transform: uppercase
+        font-size: 0.9em
 
     img
         width: 15px
