--- a/web/src/app/components/karma-tile/karma-tile.component.sass
+++ b/web/src/app/components/karma-tile/karma-tile.component.sass
@@ -3,34 +3,45 @@
 .karma-tile
     background-color: rgba(white, 0.15)
     width: fit-content
-    padding: 5px
-    border-radius: 5px
+    padding: 10px
+    border-radius: 10px
     text-align: center
-    border: solid 2px rgba(white, 0.75)
 
     .title
         text-transform: uppercase
         font-size: 13px
         margin: 0px 4px
+        color: $c-font-general
 
     .value
         font-weight: 500
         margin: 5px 10px 5px 10px
+        color: $c-font-general
 
 
 .small
+    padding: 5px
+    min-width: 40px
+    background-color: transparent !important
+    border: solid 1px
+
     .value
         margin: 0
+        font-size: 1em
+        color: inherit
 
 
 .bad
-    background-color: rgba($c-red, 0.15)
-    border-color: rgba($c-red, 0.75)
+    background-color: $c-red
+    border-color: $c-red
+    color: $c-red
 
 .good
-    background-color: rgba($c-lime, 0.15)
-    border-color: rgba($c-lime, 0.75)
+    background-color: $c-green
+    border-color: $c-green
+    color: $c-green
 
 .supreme
-    background-color: rgba($c-cyan, 0.15)
-    border-color: rgba($c-cyan, 0.75)
+    background-color: $c-cyan
+    border-color: $c-cyan
+    color: $c-cyan
