--- a/web/src/app/components/popup/popup.component.sass
+++ b/web/src/app/components/popup/popup.component.sass
@@ -5,7 +5,7 @@
     background-color: darken($c-bg-general, 10%)
     border-radius: 10px
     z-index: 2
-    box-shadow: 0 10px 20px 0 rgba(black, 0.5)
+    box-shadow: 0 5px 20px 5px rgba(black, 0.5)
 
     .element
         padding: 10px 15px
