--- a/web/src/app/routes/home/home.component.sass
+++ b/web/src/app/routes/home/home.component.sass
@@ -11,9 +11,9 @@
     background-color: $c-nqblack
     width: fit-content
     min-width: $width
-    height: $width + 60px
+    // height: $width + 60px
     margin: 0 20px 20px 0
-    border-radius: 5px
+    border-radius: 10px
     overflow: hidden
     cursor: pointer
     overflow: hidden
@@ -29,7 +29,7 @@
         width: $width
         height: $width
         overflow: hidden
-        border-radius: 5px
+        border-radius: 10px
 
         img
             width: $width
@@ -37,7 +37,7 @@
             +transition25
 
     .info-container
-        padding: 10px 10px
+        padding: 15px 15px
         max-width: $width
 
         > *
@@ -46,7 +46,8 @@
             overflow: hidden
         > h1
             font-size: 18px
-        > p
+            padding-bottom: 5px
+        > span
             font-size: 14px
             color: $c-font-gray
 
