--- a/web/src/app/components/header/header.component.html
+++ b/web/src/app/components/header/header.component.html
@@ -25,7 +25,7 @@
   </div>
 
   <ng-template #tmpLogin>
-    <div id="user-info" class="d-flex">
+    <div class="d-flex ml-auto">
       <a (click)="onLogin()">
         <button class="btn-login">
           <img height="20" src="/assets/dc-logo.svg"/>
