--- a/web/src/app/components/karma-scoreboard/karma-scoreboard.component.html
+++ b/web/src/app/components/karma-scoreboard/karma-scoreboard.component.html
@@ -1,5 +1,5 @@
 <div class="karma-container">
-    <h6 class="mb-2">Karma Scoreboard</h6>
+    <h6 class="mb-3 mt-1 ml-1">Karma Scoreboard</h6>
     <app-spinner id="spinner-load-permissions" *ngIf="scoreboard == null; else scoreboardContainer" [started]="true"></app-spinner>
     <ng-template #scoreboardContainer>
         <i *ngIf="scoreboard.length < 1">Scoreboard is empty. :(</i>
