--- a/web/src/app/components/starboard/starboard.component.html
+++ b/web/src/app/components/starboard/starboard.component.html
@@ -1,7 +1,7 @@
 <div class="starboard-container">
-    <div class="d-flex mb-2">
+    <div class="d-flex mb-3 mt-1 ml-1">
         <h6>Starboard</h6>
-        <a class="ml-auto link" (click)="sortOrderChange.emit()">Sort by {{sortOrder}}</a>
+        <button class="ml-auto btn-sort" (click)="sortOrderChange.emit()">Sort by {{sortOrder}}</button>
     </div>
     <app-spinner id="spinner-load-permissions" *ngIf="starboard == null; else scoreboardContainer" [started]="true"></app-spinner>
     <ng-template #scoreboardContainer>
