--- a/web/src/app/routes/guild/guild.component.sass
+++ b/web/src/app/routes/guild/guild.component.sass
@@ -3,7 +3,11 @@
     
 #heading-container
     display: flex
-    flex-wrap: wrap
+
+    h3
+        white-space: nowrap
+        overflow: hidden
+        text-overflow: ellipsis
 
     img
         width: 50px
@@ -151,6 +155,10 @@
         height: 16px
         background-image: url('/assets/close.svg')
         background-size: contain
+        opacity: 0.6
+        transition: all 0.2s ease
+        &:hover
+            opacity: 1
 
 
 .add-permission
