apply new discord logo

--- a/web/src/app/components/header/header.component.html
+++ b/web/src/app/components/header/header.component.html
@@ -28,8 +28,8 @@
     <div class="d-flex ml-auto">
       <a (click)="onLogin()">
         <button class="btn-login">
-          <img height="20" src="/assets/dc-logo.svg"/>
-          LOGIN
+          <img height="14" class="mr-2" src="/assets/dc-logo.svg"/>
+          <span>LOGIN</span>
         </button>
       </a>
     </div>
