--- a/web/src/app/routes/info/info.component.html
+++ b/web/src/app/routes/info/info.component.html
@@ -1,5 +1,5 @@
-<div>
-    <h1 class="mb-3">ABOUT</h1>
+<div class="mt-4">
+    <h2 class="mb-3">About</h2>
     <ul>
         <li><a href="https://github.com/zekroTJA/shinpuru" target="_blank">GitHub Repository</a></li>
         <li><a href="https://github.com/zekroTJA/shinpuru/blob/master/LICENCE" target="_blank">Licence</a></li>
@@ -10,8 +10,8 @@
         <li><a href="https://github.com/zekroTJA/shinpuru/issues" target="_blank">Issue Tracker</a></li>
     </ul>
 
-    <div class="d-flex mb-3 mt-4">
-        <h1>SYSTEM INFORMATION</h1>
+    <div class="d-flex mb-3 mt-5">
+        <h2>System Information</h2>
         <app-slider class="ml-auto mr-3" (switch)="onARClick($event)">Auto-Refresh</app-slider>
     </div>
 
