--- a/web/src/app/routes/commands/commands.component.sass
+++ b/web/src/app/routes/commands/commands.component.sass
@@ -18,8 +18,9 @@ button.back-top
     bottom: 20px
     left: 20px
     opacity: 0.5
-    background-color: transparent
-    border: solid 1px white
+    background-color: rgba(black, 0.35)
+    // border: solid 1px white
+    border-radius: 10px !important
     +transition25
 
     > img
@@ -44,24 +45,28 @@ button.back-top
 
     .group-tile
         background-color: rgba(black, 0.15)
-        border-radius: 8px
-        padding: 10px
+        border-radius: 10px
+        padding: 15px
         margin: 0 10px 10px 0
         width: 100%
 
         @media only screen and (min-width: 900px) and (max-width: 1600px)
             width: calc(33% - 10px)
 
+        > h5
+            padding-bottom: 10px
+
         > div
             display: flex
             flex-wrap: wrap
 
             > a
-                background-color: rgba(black, 0.3)
-                border-radius: 5px
+                // background-color: rgba(black, 0.3)
+                border-radius: 100px
+                font-size: 0.9em
                 padding: 3px 8px
                 margin: 5px 5px 0px 0
-                border: solid 1px rgba(white, 0.2)
+                border: solid 1px rgba(white, 0.4)
                 +hover-btn(1.03, 3px)
 
 
@@ -98,13 +103,16 @@ button.back-top
 
     .dmc-badge
         font-size: 9px
-        padding: 1px 3px
-        background-color: rgba($c-lime, 0.25)
+        padding: 2px 5px
         color: $c-lime
         border: solid 1px $c-lime
-        border-radius: 3px
+        border-radius: 100px
         margin-left: 10px
 
 
 .group-header
     margin-top: 50px !important
+
+
+.capitalize
+    text-transform: capitalize
