move guild settings in guild admin section [#194]

--- a/web/src/app/routes/guild/guild.component.sass
+++ b/web/src/app/routes/guild/guild.component.sass
@@ -1,6 +1,7 @@
 @import '../../../sass/vars'
 @import '../../../sass/mixins'
     
+
 #heading-container
     display: flex
 
@@ -277,6 +278,16 @@
         border: solid 1px white
         font-size: 12px
         margin-left: 10px
+
+
+.btn-guild-settings
+    background-image: url('/assets/settings.svg')
+    background-size: 50%
+    background-repeat: no-repeat
+    background-position: center
+    pading: 0px
+    min-height: 35px
+    min-width: 35px
 
 
 @media only screen and (max-width: 700px)
