--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -177,6 +177,8 @@ select
 
 
 .guild-settings-container
+    width: calc(100% - 240px)
+    max-width: 1000px
     position: absolute
     top: 50px
     left: $guild-settings-nav-width
