--- a/web/src/app/routes/guild/guild.component.sass
+++ b/web/src/app/routes/guild/guild.component.sass
@@ -288,6 +288,8 @@
     pading: 0px
     min-height: 35px
     min-width: 35px
+    margin-left: auto
+    margin-right: 0px !important
 
 
 @media only screen and (max-width: 700px)
