--- a/web/src/app/routes/guild/guild.component.sass
+++ b/web/src/app/routes/guild/guild.component.sass
@@ -285,7 +285,7 @@
     background-size: 50%
     background-repeat: no-repeat
     background-position: center
-    pading: 0px
+    padding: 0px
     min-height: 35px
     min-width: 35px
     margin-left: auto
