--- a/web/src/app/components/starboard-entry/starboard-entry.component.sass
+++ b/web/src/app/components/starboard-entry/starboard-entry.component.sass
@@ -1,4 +1,5 @@
 @import '../../../sass/vars'
+@import '../../../sass/mixins'
     
 .starboard-entry-container
     align-items: center
@@ -7,6 +8,7 @@
     margin-bottom: 10px
     padding: 5px
     max-width: 100%
+    +hover-btn(1.01, 5px)
 
     .header
         display: flex
