unify heading capitalazition

--- a/web/src/app/routes/settings/settings.component.html
+++ b/web/src/app/routes/settings/settings.component.html
@@ -1,7 +1,7 @@
 <div>
-    <h1 class="mb-4">GLOBAL BOT SETTINGS</h1>
+    <h1 class="mb-4">Global Bot Settings</h1>
 
-    <h3>PRESENCE</h3>
+    <h3>Presence</h3>
     <app-spinner *ngIf="!presence; else presenceTemp" [started]="true"></app-spinner>
     <ng-template #presenceTemp>
         <div class="d-flex mt-3">
