add guild log settings page [#229]

--- a/web/src/app/components/guild-admin-navbar/guild-admin-navbar.component.sass
+++ b/web/src/app/components/guild-admin-navbar/guild-admin-navbar.component.sass
@@ -20,7 +20,7 @@
         background-color: rgba(black, 0.15)
         cursor: pointer
         font-size: 18px
-        text-transform: uppercase
+        text-transform: capitalize
 
         +transition25
 
