fix pro tip style; fix karma rule style

--- a/web/src/app/components/protip/protip.component.html
+++ b/web/src/app/components/protip/protip.component.html
@@ -1,7 +1,7 @@
 <div class="container" [style]="style" [ngClass]="classes">
     <div class="header">
         <img height="20" class="mr-2" src="/assets/lightbulb.svg"/>
-        <h4>PRO TIP</h4>
+        <h4>Pro Tip</h4>
         <a class="btn-close" (click)="onClose()"></a>
     </div>
     <div>
