--- a/web/src/app/components/protip/protip.component.sass
+++ b/web/src/app/components/protip/protip.component.sass
@@ -6,10 +6,11 @@
     width: 500px
     max-width: 70vw
     padding: 15px 20px
-    background-color: rgba($c-cyan, 0.25)
-    border-radius: 5px
-    box-shadow: 0px 8px 25px 0px rgba(black, 0.35)
+    background-color: darken($c-cyan, 20)
+    border-radius: 10px
+    box-shadow: 0px 8px 25px 10px rgba(black, 0.35)
     opacity: 0
+    cursor: pointer
     transition: opacity .5s ease
 
     &.show
