--- a/web/src/app/routes/guild-admin/general/ga-general.component.sass
+++ b/web/src/app/routes/guild-admin/general/ga-general.component.sass
@@ -2,9 +2,6 @@
 @import '../../../../sass/mixins'
     
 .settingsTile
-    // max-width: 1000px
-    // width: 100%
-
     background-color: $c-nqblack
     padding: 10px
     border-radius: 5px
@@ -17,3 +14,8 @@
        padding: 5px 15px
        margin-left: auto
        margin-right: 0px
+
+
+.message-inpt
+    width: 50%
+    min-width: 100px
