add karma of self user in scoreboard [#240]

--- a/web/src/app/components/karma-scoreboard/karma-scoreboard.component.sass
+++ b/web/src/app/components/karma-scoreboard/karma-scoreboard.component.sass
@@ -1,6 +1,11 @@
 @import '../../../sass/mixins'
 
 
+hr
+    margin: 8px 0
+    border-color: #202225 !important
+
+
 .karma-container
     background-color: rgba(0, 0, 0, 0.15)
     border-radius: 10px
