add karma penalty setting to web frontend

--- a/web/src/app/components/slider/slider.component.sass
+++ b/web/src/app/components/slider/slider.component.sass
@@ -12,6 +12,7 @@ $bar-height: $nob-size + $bar-padding
 .btn
     cursor: pointer
     display: flex
+    padding: 0
 
 .container-slider
     padding: 0px
