update background colors

--- a/web/src/sass/vars.sass
+++ b/web/src/sass/vars.sass
@@ -1,8 +1,8 @@
 // DISCORD COLOR CI
 $c-blurple: #5865F2
 $c-greyple: #99AAB5
-$c-darkbnb: #2C2F33
-$c-nqblack: #23272A
+$c-darkbnb: #202020
+$c-nqblack: #171717
 $c-red:     #ED4245
 $c-orange:  #F57C00
 $c-green:   #43A047
