--- a/web/src/app/components/header/header.component.sass
+++ b/web/src/app/components/header/header.component.sass
@@ -13,7 +13,7 @@
     p
         margin-left: 10px
         margin-right: 0 !important
-        text-transform: uppercase
+        text-transform: capitalize
         font-size: 0.9em
 
     img
