--- a/web/src/app/components/guild-admin-navbar/guild-admin-navbar.component.sass
+++ b/web/src/app/components/guild-admin-navbar/guild-admin-navbar.component.sass
@@ -5,22 +5,23 @@
 .navbar
     position: fixed
     align-content: start
-    top: 50px
-    bottom: 0px
-    left: 0px
+    top: 90px
+    left: 25px
     width: $guild-settings-nav-width
     padding: 0px
-    background-color: rgba(black, 0.1)
+    background-color: rgba(black, 0.15)
+    border-radius: 10px
+    overflow: hidden
 
     .item
         display: flex
         width: 100%
         padding: 8px 10px
         align-items: center
-        background-color: rgba(black, 0.15)
         cursor: pointer
         font-size: 18px
         text-transform: capitalize
+        border-radius: 10px
 
         +transition25
 
