--- a/web/src/app/components/header/header.component.html
+++ b/web/src/app/components/header/header.component.html
@@ -1,18 +1,31 @@
 <!-- @format -->
 
 <div id="header" class="container-fluid">
-  <a class="d-flex" routerLink="/guilds">
-    <img id="sp-logo" height="30" src="/assets/shinpuru-logo.png" />
-  </a>
+  <div class="part-container shade">
+    <a class="d-flex" routerLink="/guilds">
+      <img id="sp-logo" height="30" src="/assets/shinpuru-logo.png" />
+    </a>
 
-  <div class="routes">
-    <span *ngFor="let r of routes; index as i">
-      <img *ngIf="i > 0" height="10" width="10" src="/assets/arrow.svg" class="mr-1" />
-      <a [routerLink]="r[1]">{{ r[0] }}</a>
-    </span>
+    <div class="routes">
+      <span *ngFor="let r of routes; index as i">
+        <img
+          *ngIf="i > 0"
+          height="10"
+          width="10"
+          src="/assets/arrow.svg"
+          class="mr-1"
+        />
+        <a [routerLink]="r[1]">{{ r[0] }}</a>
+      </span>
+    </div>
   </div>
 
-  <div *ngIf="selfUser?.id; else tmpLogin" id="user-info" class="d-flex" (click)="popupVisible = true">
+  <div
+    *ngIf="selfUser?.id; else tmpLogin"
+    id="user-info"
+    class="part-container shade"
+    (click)="popupVisible = true"
+  >
     <app-popup
       *ngIf="popupVisible"
       class="dropdown-popup"
@@ -21,14 +34,14 @@
     ></app-popup>
     <a class="dropdown-btn">&#9660;</a>
     <p>{{ selfUser.username }}#{{ selfUser.discriminator }}</p>
-    <img class="avatar" [src]="selfUser.avatar_url | discordAsset:'':32" />
+    <img class="avatar" [src]="selfUser.avatar_url | discordAsset: '':32" />
   </div>
 
   <ng-template #tmpLogin>
     <div class="d-flex ml-auto">
       <a (click)="onLogin()">
         <button class="btn-login">
-          <img height="14" class="mr-2" src="/assets/dc-logo.svg"/>
+          <img height="14" class="mr-2" src="/assets/dc-logo.svg" />
           <span>LOGIN</span>
         </button>
       </a>
