one step more for responsive guild settings

--- a/web/src/app/components/guild-admin-navbar/guild-admin-navbar.component.html
+++ b/web/src/app/components/guild-admin-navbar/guild-admin-navbar.component.html
@@ -1,11 +1,15 @@
-<div class="navbar shade">
-  <div
-    *ngFor="let r of routes"
-    class="item"
-    [class.active]="currentPath === r.route"
-    (click)="navigate(r)"
-  >
-    <img src="/assets/{{ r.icon }}" />
-    <span class="content">{{ r.displayname }}</span>
+<div class="navbar-container">
+  <div class="navbar">
+    <div class="items shade">
+      <div
+        *ngFor="let r of routes"
+        class="item"
+        [class.active]="currentPath === r.route"
+        (click)="navigate(r)"
+      >
+        <img src="/assets/{{ r.icon }}" />
+        <span class="content">{{ r.displayname }}</span>
+      </div>
+    </div>
   </div>
 </div>
