--- a/web/src/app/components/guild-admin-navbar/guild-admin-navbar.component.sass
+++ b/web/src/app/components/guild-admin-navbar/guild-admin-navbar.component.sass
@@ -9,29 +9,50 @@
     left: 25px
     width: $guild-settings-nav-width
     padding: 0px
-    background-color: rgba(black, 0.15)
-    border-radius: 10px
-    overflow: hidden
+    z-index: 10
 
-    .item
-        display: flex
+    > .items
         width: 100%
-        padding: 8px 10px
-        align-items: center
-        cursor: pointer
-        font-size: 18px
-        text-transform: capitalize
+        background-color: $c-nqblack
         border-radius: 10px
+        overflow: hidden
 
-        +transition25
+        > .item
+            display: flex
+            width: 100%
+            padding: 8px 10px
+            align-items: center
+            cursor: pointer
+            font-size: 18px
+            text-transform: capitalize
+            border-radius: 10px
 
-        > img
-            width: 25px
-            height: 25px
-            margin-right: 10px
+            +transition25
 
-        &:hover
-            background-color: rgba(black, 0.3)
+            > img
+                width: 25px
+                height: 25px
+                margin-right: 10px
+
+            &:hover
+                background-color: rgba(black, 0.3)
+
+    @media screen and (max-width: 750px)
+        top: unset
+        bottom: 20px
+        width: calc(100% - 40px)
+        justify-content: center
+        display: flex
+
+        > .items
+            width: fit-content
+            display: flex
+            > .item
+                width: fit-content
+                > img
+                    margin-right: 0
+                > .content
+                    display: none
 
 
 .active
