--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -186,6 +186,7 @@ select
 
     > div
         max-width: 1000px
+        width: 100%
         margin: 0 auto
 
     @media screen and (max-width: 750px)
