--- a/web/src/app/routes/guild-admin/karma/ga-karma.component.sass
+++ b/web/src/app/routes/guild-admin/karma/ga-karma.component.sass
@@ -20,6 +20,7 @@ td > button
 
 .karma-rule
     display: flex
+    flex-wrap: wrap
     align-items: center
     padding: 3px 5px
     border-radius: 5px
@@ -48,3 +49,8 @@ td > button
 .message-content
     overflow: hidden
     text-overflow: ellipsis
+
+
+.rule-container
+    display: flex
+    flex-wrap: wrap
