--- a/web/src/app/routes/guild-admin/data/ga-data.component.sass
+++ b/web/src/app/routes/guild-admin/data/ga-data.component.sass
@@ -4,14 +4,17 @@
 
 .delete-container
     display: flex
+    flex-wrap: wrap
     align-items: center
 
     .delete-button
         background-color: $c-red
         padding: 8px 20px
+        margin-bottom: 20px
 
     .slider
         height: 40px
+        margin-bottom: 8px
 
 
 .small
