--- a/web/src/app/routes/login/login.component.sass
+++ b/web/src/app/routes/login/login.component.sass
@@ -31,7 +31,7 @@ hr
 
 .login-container
     position: absolute
-    top: 50px
+    top: 0px
     left: 0px
     right: 0px
     
@@ -40,7 +40,7 @@ hr
     display: flex
     flex-direction: column
     width: 100%
-    height: calc(100vh - 40px + 5vh)
+    height: calc(100vh + 5vh)
     background-image: url('/assets/landingpage/background.png')
     background-position: 50%
     background-repeat: no-repeat
