--- a/web/src/app/components/header/header.component.sass
+++ b/web/src/app/components/header/header.component.sass
@@ -99,6 +99,8 @@
     padding: 4px 14px
     display: flex
     align-items: center
+    border-radius: 150px !important
+    margin: 15px 5px 0 0
 
 
 @media only screen and (max-width: 900px)
