--- a/web/src/app/routes/member/member.component.html
+++ b/web/src/app/routes/member/member.component.html
@@ -1,215 +1,325 @@
 <div class="mt-4">
+  <!-- --------------------- MODAL --------------------------- -->
 
-    <!-- --------------------- MODAL --------------------------- -->
-
-    <ng-template #modalReport let-modal>
-        <div class="modal-header">
-            <h4 class="modal-title">REPORT</h4>
-        </div>
-        <div class="modal-body">
-            <h5 class="mb-2">TYPE</h5>
-            <select [(ngModel)]="repModalType">
-                <option [ngValue]="3">WARN</option>
-                <option [ngValue]="4">AD</option>
-            </select>
-            
-            <h5 class="mt-3 mb-2">REASON</h5>
-            <textarea rows="5" class="rep-reason" [(ngModel)]="repModalReason" placeholder="Report description should be as detailed as possible."></textarea>
-            
-            <h5 class="mt-3 mb-2">ATTACHMENT</h5>            
-            <input type="text" class="w-100" [(ngModel)]="repModalAttachment" placeholder="media URL (optional)"/>
-        </div>
-        <div class="modal-footer">
-            <button (click)="modal.close(true)" class="bg-red">EXECUTE REPORT</button>
-            <button (click)="modal.close()" ngbAutofocus>CANCEL</button>
-        </div>
-    </ng-template>
-
-    <ng-template #modalKick let-modal>
-        <div class="modal-header">
-            <h4 class="modal-title">KICK</h4>
-        </div>
-        <div class="modal-body">            
-            <h5 class="mb-2">REASON</h5>
-            <textarea rows="5" class="rep-reason" [(ngModel)]="repModalReason" placeholder="Report description should be as detailed as possible."></textarea>
-            
-            <h5 class="mt-3 mb-2">ATTACHMENT</h5>            
-            <input type="text" class="w-100" [(ngModel)]="repModalAttachment" placeholder="media URL (optional)"/>
-        </div>
-        <div class="modal-footer">
-            <button (click)="modal.close(true)" class="bg-red">EXECUTE KICK</button>
-            <button (click)="modal.close()" ngbAutofocus>CANCEL</button>
-        </div>
-    </ng-template>
-
-    <ng-template #modalBan let-modal>
-        <div class="modal-header">
-            <h4 class="modal-title">BAN</h4>
-        </div>
-        <div class="modal-body">            
-            <h5 class="mb-2">REASON</h5>
-            <textarea rows="5" class="rep-reason" [(ngModel)]="repModalReason" placeholder="Report description should be as detailed as possible."></textarea>
-            
-            <h5 class="mt-3 mb-2">ATTACHMENT</h5>            
-            <input type="text" class="w-100" [(ngModel)]="repModalAttachment" placeholder="media URL (optional)"/>
-        </div>
-        <div class="modal-footer">
-            <button (click)="modal.close(true)" class="bg-red">EXECUTE BAN</button>
-            <button (click)="modal.close()" ngbAutofocus>CANCEL</button>
-        </div>
-    </ng-template>
-
-    <ng-template #modalRevoke let-modal>
-        <div class="modal-header">
-            <h4 class="modal-title">REVOKE</h4>
-        </div>
-        <div class="modal-body">            
-            <h5 class="mb-2">REASON</h5>
-            <textarea rows="5" class="rep-reason" [(ngModel)]="repModalReason" placeholder="Report description should be as detailed as possible."></textarea>
-        </div>
-        <div class="modal-footer">
-            <button (click)="modal.close(true)" class="bg-orange">REVOKE</button>
-            <button (click)="modal.close()" ngbAutofocus>CANCEL</button>
-        </div>
-    </ng-template>
-
-    <ng-template #modalMute let-modal>
-        <div class="modal-header">
-            <h4 class="modal-title">CHAT MUTE</h4>
-        </div>
-        <div class="modal-body">            
-            <h5 class="mb-2">REASON</h5>
-            <textarea rows="5" class="rep-reason" [(ngModel)]="repModalReason" placeholder="Report description should be as detailed as possible."></textarea>
-            
-            <h5 class="mt-3 mb-2">ATTACHMENT</h5>            
-            <input type="text" class="w-100" [(ngModel)]="repModalAttachment" placeholder="media URL (optional)"/>
-        </div>
-        <div class="modal-footer">
-            <button (click)="modal.close(true)" class="bg-purple">EXECUTE MUTE</button>
-            <button (click)="modal.close()" ngbAutofocus>CANCEL</button>
-        </div>
-    </ng-template>
-
-    <ng-template #modalUnmute let-modal>
-        <div class="modal-header">
-            <h4 class="modal-title">REVOKE CHAT MUTE</h4>
-        </div>
-        <div class="modal-body">            
-            <h5 class="mb-2">REASON</h5>
-            <textarea rows="5" class="rep-reason" [(ngModel)]="repModalReason" placeholder="Revoke description (optional)."></textarea>
-        </div>
-        <div class="modal-footer">
-            <button (click)="modal.close(true)" class="bg-purple">REVOKE MUTE</button>
-            <button (click)="modal.close()" ngbAutofocus>CANCEL</button>
-        </div>
-    </ng-template>
-
-    <!-- ------------------------------------------------------- -->
-
-    <app-spinner *ngIf="!member && !guild" id="spinner-load-member" [started]="true"></app-spinner>
-    <div *ngIf="member && guild">
-
-        <div id="heading-container">
-            <img [src]="member.avatar_url | discordAsset:'':64"/>
-            <div>
-                <div class="d-flex">
-                    <h3>{{ member.user.username }}#{{ member.user.discriminator }}</h3>
-                    <p *ngIf="member.user.bot" class="bot-tag">BOT</p>
-                    <p class="embedded">{{ member.user.id }}</p>
-                </div>
-                <p *ngIf="member.nick" class="font-gray">aka. "{{ member.nick }}"</p>
-            </div>
-        </div>
-        <div *ngIf="memberRoles.length > 0" class="d-flex overflow-wrap mb-2">
-            <app-rolebadge *ngFor="let r of memberRoles" [role]="r"></app-rolebadge>
-        </div>
-
-        <div *ngIf="!member?.user.bot" class="mt-5">
-            <h3 class="mb-4">Karma</h3>
-
-            <div class="d-flex">
-                <a routerLink="/guilds/{{ guild.id }}/scoreboard" class="mr-3 karma-tile">
-                    <app-karma-tile title="Guild" [value]="member.karma"></app-karma-tile>
-                </a>
-                <a routerLink="/guilds/{{ guild.id }}/scoreboard" class="karma-tile">
-                    <app-karma-tile title="Total" [value]="member.karma_total"></app-karma-tile>
-                </a>
-            </div>
-        </div>
-
-        <h3 class="mt-5 mb-4">General User Information</h3>
-
-        <table class="general-user-info mt-2">
-            <tbody>
-                <tr>
-                    <th>Joined Guild</th>
-                    <td>{{ dateFormat(member.joined_at, "ddd, mmm dS, yyyy - HH:MM:ss Z") }}</td>
-                </tr>
-                <tr>
-                    <th>Created Account</th>
-                    <td>{{ dateFormat(member.created_at, "ddd, mmm dS, yyyy - HH:MM:ss Z") }}</td>
-                </tr>
-                <br>
-                <tr>
-                    <th>Permissions</th>
-                    <td>
-                        <app-spinner id="spinner-load-permissions" *ngIf="!perm; else permsview" [started]="true" [small]="true"></app-spinner>
-                        <ng-template #permsview>
-                            <div class="d-flex overflow-wrap">
-                                <p 
-                                    *ngFor="let p of getPerms(true)" 
-                                    class="permissions embedded allowed"
-                                >{{ p }}</p>
-                            </div>
-                            <div class="d-flex overflow-wrap">
-                                <p 
-                                    *ngFor="let p of getPerms(false)" 
-                                    class="permissions embedded disallowed"
-                                >{{ p }}</p>
-                            </div>
-                        </ng-template>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-
-        <div *ngIf="
-            member.user.id !== guild.self_member.user.id && 
-            canPerformAny('sp.guild.mod.report', 'sp.guild.mod.kick', 'sp.guild.mod.ban', 'sp.guild.mod.mute')
-        " class="mt-5 mb-2">
-            <h3>Moderation</h3>
-            <app-spinner id="spinner-load-modbuttons" *ngIf="!perm" [started]="true"></app-spinner>
-            <div class="mod-buttons mt-4">
-                <button *ngIf="hasPermission('sp.guild.mod.report')" (click)="report()">
-                    REPORT
-                </button>
-                <button *ngIf="canPerform('sp.guild.mod.kick')" class="bg-orange" (click)="kick()">
-                    KICK
-                </button>
-                <button *ngIf="canPerform('sp.guild.mod.ban')" class="bg-red" (click)="ban()">
-                    BAN
-                </button>
-                <button *ngIf="canPerform('sp.guild.mod.mute')" class="bg-purple" (click)="muteUnmute()">
-                    {{ member.chat_muted ? 'CHAT UNMUTE' : 'CHAT MUTE' }}
-                </button>
-            </div>
-        </div>
-
-        <div class="d-flex mt-5 mb-4">
-            <h3>Reports</h3>
-            <p *ngIf="reports?.length" class="reports-count">{{ reports.length }}</p>
-        </div>
-        <app-spinner *ngIf="!reports" id="spinner-load-reports" [started]="true"></app-spinner>
-        <div>
-            <i *ngIf="reports?.length === 0">{{ member.user.username }} has a white vest! 👌</i>
-            <app-report 
-                *ngFor="let rep of reports" 
-                [report]="rep" 
-                [victim]="member"
-                [allowRevoke]="canRevoke"
-                (revoke)="revokeReport(rep)"
-            ></app-report>
-        </div>
-
+  <ng-template #modalReport let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title">REPORT</h4>
     </div>
+    <div class="modal-body">
+      <h5 class="mb-2">TYPE</h5>
+      <select [(ngModel)]="repModalType">
+        <option [ngValue]="3">WARN</option>
+        <option [ngValue]="4">AD</option>
+      </select>
+
+      <h5 class="mt-3 mb-2">REASON</h5>
+      <textarea
+        rows="5"
+        class="rep-reason"
+        [(ngModel)]="repModalReason"
+        placeholder="Report description should be as detailed as possible."
+      ></textarea>
+
+      <h5 class="mt-3 mb-2">ATTACHMENT</h5>
+      <input
+        type="text"
+        class="w-100"
+        [(ngModel)]="repModalAttachment"
+        placeholder="media URL (optional)"
+      />
+    </div>
+    <div class="modal-footer">
+      <button (click)="modal.close(true)" class="bg-red">EXECUTE REPORT</button>
+      <button (click)="modal.close()" ngbAutofocus>CANCEL</button>
+    </div>
+  </ng-template>
+
+  <ng-template #modalKick let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title">KICK</h4>
+    </div>
+    <div class="modal-body">
+      <h5 class="mb-2">REASON</h5>
+      <textarea
+        rows="5"
+        class="rep-reason"
+        [(ngModel)]="repModalReason"
+        placeholder="Report description should be as detailed as possible."
+      ></textarea>
+
+      <h5 class="mt-3 mb-2">ATTACHMENT</h5>
+      <input
+        type="text"
+        class="w-100"
+        [(ngModel)]="repModalAttachment"
+        placeholder="media URL (optional)"
+      />
+    </div>
+    <div class="modal-footer">
+      <button (click)="modal.close(true)" class="bg-red">EXECUTE KICK</button>
+      <button (click)="modal.close()" ngbAutofocus>CANCEL</button>
+    </div>
+  </ng-template>
+
+  <ng-template #modalBan let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title">BAN</h4>
+    </div>
+    <div class="modal-body">
+      <h5 class="mb-2">REASON</h5>
+      <textarea
+        rows="5"
+        class="rep-reason"
+        [(ngModel)]="repModalReason"
+        placeholder="Report description should be as detailed as possible."
+      ></textarea>
+
+      <h5 class="mt-3 mb-2">ATTACHMENT</h5>
+      <input
+        type="text"
+        class="w-100"
+        [(ngModel)]="repModalAttachment"
+        placeholder="media URL (optional)"
+      />
+
+      <h5 class="mt-3 mb-2">TIMEOUT</h5>
+      <input type="datetime-local" [(ngModel)]="repModalTimeout" />
+    </div>
+    <div class="modal-footer">
+      <button (click)="modal.close(true)" class="bg-red">EXECUTE BAN</button>
+      <button (click)="modal.close()" ngbAutofocus>CANCEL</button>
+    </div>
+  </ng-template>
+
+  <ng-template #modalRevoke let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title">REVOKE</h4>
+    </div>
+    <div class="modal-body">
+      <h5 class="mb-2">REASON</h5>
+      <textarea
+        rows="5"
+        class="rep-reason"
+        [(ngModel)]="repModalReason"
+        placeholder="Report description should be as detailed as possible."
+      ></textarea>
+    </div>
+    <div class="modal-footer">
+      <button (click)="modal.close(true)" class="bg-orange">REVOKE</button>
+      <button (click)="modal.close()" ngbAutofocus>CANCEL</button>
+    </div>
+  </ng-template>
+
+  <ng-template #modalMute let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title">CHAT MUTE</h4>
+    </div>
+    <div class="modal-body">
+      <h5 class="mb-2">REASON</h5>
+      <textarea
+        rows="5"
+        class="rep-reason"
+        [(ngModel)]="repModalReason"
+        placeholder="Report description should be as detailed as possible."
+      ></textarea>
+
+      <h5 class="mt-3 mb-2">ATTACHMENT</h5>
+      <input
+        type="text"
+        class="w-100"
+        [(ngModel)]="repModalAttachment"
+        placeholder="media URL (optional)"
+      />
+
+      <h5 class="mt-3 mb-2">TIMEOUT</h5>
+      <input type="datetime-local" [(ngModel)]="repModalTimeout" />
+    </div>
+    <div class="modal-footer">
+      <button (click)="modal.close(true)" class="bg-purple">
+        EXECUTE MUTE
+      </button>
+      <button (click)="modal.close()" ngbAutofocus>CANCEL</button>
+    </div>
+  </ng-template>
+
+  <ng-template #modalUnmute let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title">REVOKE CHAT MUTE</h4>
+    </div>
+    <div class="modal-body">
+      <h5 class="mb-2">REASON</h5>
+      <textarea
+        rows="5"
+        class="rep-reason"
+        [(ngModel)]="repModalReason"
+        placeholder="Revoke description (optional)."
+      ></textarea>
+    </div>
+    <div class="modal-footer">
+      <button (click)="modal.close(true)" class="bg-purple">REVOKE MUTE</button>
+      <button (click)="modal.close()" ngbAutofocus>CANCEL</button>
+    </div>
+  </ng-template>
+
+  <!-- ------------------------------------------------------- -->
+
+  <app-spinner
+    *ngIf="!member && !guild"
+    id="spinner-load-member"
+    [started]="true"
+  ></app-spinner>
+  <div *ngIf="member && guild">
+    <div id="heading-container">
+      <img [src]="member.avatar_url | discordAsset: '':64" />
+      <div>
+        <div class="d-flex">
+          <h3>{{ member.user.username }}#{{ member.user.discriminator }}</h3>
+          <p *ngIf="member.user.bot" class="bot-tag">BOT</p>
+          <p class="embedded">{{ member.user.id }}</p>
+        </div>
+        <p *ngIf="member.nick" class="font-gray">aka. "{{ member.nick }}"</p>
+      </div>
+    </div>
+    <div *ngIf="memberRoles.length > 0" class="d-flex overflow-wrap mb-2">
+      <app-rolebadge *ngFor="let r of memberRoles" [role]="r"></app-rolebadge>
+    </div>
+
+    <div *ngIf="!member?.user.bot" class="mt-5">
+      <h3 class="mb-4">Karma</h3>
+
+      <div class="d-flex">
+        <a
+          routerLink="/guilds/{{ guild.id }}/scoreboard"
+          class="mr-3 karma-tile"
+        >
+          <app-karma-tile title="Guild" [value]="member.karma"></app-karma-tile>
+        </a>
+        <a routerLink="/guilds/{{ guild.id }}/scoreboard" class="karma-tile">
+          <app-karma-tile
+            title="Total"
+            [value]="member.karma_total"
+          ></app-karma-tile>
+        </a>
+      </div>
+    </div>
+
+    <h3 class="mt-5 mb-4">General User Information</h3>
+
+    <table class="general-user-info mt-2">
+      <tbody>
+        <tr>
+          <th>Joined Guild</th>
+          <td>
+            {{ dateFormat(member.joined_at, 'ddd, mmm dS, yyyy - HH:MM:ss Z') }}
+          </td>
+        </tr>
+        <tr>
+          <th>Created Account</th>
+          <td>
+            {{
+              dateFormat(member.created_at, 'ddd, mmm dS, yyyy - HH:MM:ss Z')
+            }}
+          </td>
+        </tr>
+        <br />
+        <tr>
+          <th>Permissions</th>
+          <td>
+            <app-spinner
+              id="spinner-load-permissions"
+              *ngIf="!perm; else permsview"
+              [started]="true"
+              [small]="true"
+            ></app-spinner>
+            <ng-template #permsview>
+              <div class="d-flex overflow-wrap">
+                <p
+                  *ngFor="let p of getPerms(true)"
+                  class="permissions embedded allowed"
+                >
+                  {{ p }}
+                </p>
+              </div>
+              <div class="d-flex overflow-wrap">
+                <p
+                  *ngFor="let p of getPerms(false)"
+                  class="permissions embedded disallowed"
+                >
+                  {{ p }}
+                </p>
+              </div>
+            </ng-template>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
+    <div
+      *ngIf="
+        member.user.id !== guild.self_member.user.id &&
+        canPerformAny(
+          'sp.guild.mod.report',
+          'sp.guild.mod.kick',
+          'sp.guild.mod.ban',
+          'sp.guild.mod.mute'
+        )
+      "
+      class="mt-5 mb-2"
+    >
+      <h3>Moderation</h3>
+      <app-spinner
+        id="spinner-load-modbuttons"
+        *ngIf="!perm"
+        [started]="true"
+      ></app-spinner>
+      <div class="mod-buttons mt-4">
+        <button *ngIf="hasPermission('sp.guild.mod.report')" (click)="report()">
+          REPORT
+        </button>
+        <button
+          *ngIf="canPerform('sp.guild.mod.kick')"
+          class="bg-orange"
+          (click)="kick()"
+        >
+          KICK
+        </button>
+        <button
+          *ngIf="canPerform('sp.guild.mod.ban')"
+          class="bg-red"
+          (click)="ban()"
+        >
+          BAN
+        </button>
+        <button
+          *ngIf="canPerform('sp.guild.mod.mute')"
+          class="bg-purple"
+          (click)="muteUnmute()"
+        >
+          {{ member.chat_muted ? 'CHAT UNMUTE' : 'CHAT MUTE' }}
+        </button>
+      </div>
+    </div>
+
+    <div class="d-flex mt-5 mb-4">
+      <h3>Reports</h3>
+      <p *ngIf="reports?.length" class="reports-count">{{ reports.length }}</p>
+    </div>
+    <app-spinner
+      *ngIf="!reports"
+      id="spinner-load-reports"
+      [started]="true"
+    ></app-spinner>
+    <div>
+      <i *ngIf="reports?.length === 0"
+        >{{ member.user.username }} has a white vest! 👌</i
+      >
+      <app-report
+        *ngFor="let rep of reports"
+        [report]="rep"
+        [victim]="member"
+        [allowRevoke]="canRevoke"
+        (revoke)="revokeReport(rep)"
+      ></app-report>
+    </div>
+  </div>
 </div>
