--- a/web/src/app/components/header/header.component.sass
+++ b/web/src/app/components/header/header.component.sass
@@ -4,14 +4,39 @@
 
 .part-container
     display: flex
+    position: relative
     padding: 10px
     border-radius: 150px
     background-color: $c-nqblack
 
+    > *
+        z-index: 1
+
+    > .load-indicator
+        position: absolute
+        background-color: $c-blurple
+        top: 0
+        left: 0
+        z-index: 0
+        width: 100%
+        height: 100%
+        opacity: 0
+        border-radius: 1000px
+        transition: all 1s ease
+
+        &.loading
+            opacity: 1
+            @keyframes kf-loading
+                0%
+                    width: 0%
+                100%
+                    width: 100%
+            animation: kf-loading 10s cubic-bezier(0.05, 0.82, 0.01, 1)
+
 
 .dropdown-popup
     position: absolute
-    z-index: 10
+    z-index: 10 !important
     transform: translate(-9px, 42px)
     width: 100%
 
@@ -93,6 +118,7 @@
             font-size: 0.8em
             &:hover
                 opacity: 1
+        
 
 
 .btn-login
