close menu popup when clicking on user field

--- a/web/src/app/components/header/header.component.html
+++ b/web/src/app/components/header/header.component.html
@@ -26,7 +26,7 @@
     *ngIf="selfUser?.id; else tmpLogin"
     id="user-info"
     class="part-container shade"
-    (click)="popupVisible = true"
+    (click)="popupVisible = !popupVisible"
   >
     <app-popup
       *ngIf="popupVisible"
